--- a/package.json
+++ b/package.json
@@ -1,18 +1,19 @@
 {
-  "name": "clerk-nextjs-quickstart-app-router",
-  "version": "0.1.0",
+  "name": "PlaylistPioneer",
+  "version": "0.2.0",
   "private": true,
   "scripts": {
     "dev": "next dev",
     "build": "next build",
     "start": "next start",
-    "lint": "next lint"
+    "lint": "next lint",
+    "cy:open": "cypress open"
   },
   "dependencies": {
-    "@clerk/nextjs": "^4.27.2",
+    "@clerk/nextjs": "^5.1.5",
     "@contentful/rich-text-react-renderer": "^15.19.0",
     "@contentful/rich-text-types": "^16.3.0",
-    "@hookform/resolvers": "^3.3.2",
+    "@hookform/resolvers": "^3.6.0",
     "@radix-ui/react-accordion": "^1.1.2",
     "@radix-ui/react-alert-dialog": "^1.0.5",
     "@radix-ui/react-dialog": "^1.0.5",
@@ -22,26 +23,27 @@
     "@radix-ui/react-switch": "^1.0.3",
     "@radix-ui/react-tooltip": "^1.0.7",
     "class-variance-authority": "^0.7.0",
-    "clsx": "^2.0.0",
+    "clsx": "^2.1.1",
     "contentful": "^10.6.14",
     "cookies-next": "^4.1.0",
     "date-fns": "^3.0.5",
     "dotenv": "^16.3.1",
-    "framer-motion": "^10.16.16",
+    "framer-motion": "^11.2.10",
     "geist": "^1.2.0",
     "lucide-react": "^0.299.0",
-    "next": "14.0.3",
+    "next": "^14.2.4",
     "posthog-js": "^1.96.1",
     "react": "^18",
     "react-dom": "^18",
-    "react-hook-form": "^7.49.2",
+    "react-hook-form": "^7.52.0",
     "react-player": "^2.14.1",
+    "resend": "^3.3.0",
     "sonner": "^1.2.4",
-    "tailwind-merge": "^2.1.0",
+    "tailwind-merge": "^2.3.0",
     "tailwindcss-animate": "^1.0.7",
-    "v0": "^0.0.9",
+    "v0": "^1.1.1",
     "vaul": "^0.8.0",
-    "zod": "^3.22.4",
+    "zod": "^3.23.8",
     "zustand": "^4.4.7"
   },
   "devDependencies": {
@@ -51,6 +53,7 @@
     "@types/react": "^18",
     "@types/react-dom": "^18",
     "autoprefixer": "^10",
+    "cypress": "^13.7.0",
     "eslint": "^8",
     "eslint-config-next": "13.5.6",
     "postcss": "^8",
